# polymarket-microstructure-lab

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_paper_trading.py
backend/app/: __init__.py  __main__.py  config.py  logging_conf.py
backend/app/analysis/: fees.py  metrics.py  wallet.py
backend/app/api/: app.py
backend/app/cli/: commands.py
backend/app/clients/: __init__.py  base.py  clob.py  data_api.py  gamma.py  ws_base.py  ws_crypto.py  ws_market.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/paper/: __init__.py  accounts.py  decide.py  engine.py
backend/app/services/: collector.py  data_quality.py  discovery.py  enrichment.py  export.py  parsing.py  replay.py  wallet_sync.py
backend/app/strategies/: __init__.py  base.py  baselines.py  registry.py  simulator.py
backend/app/util/: nearest.py  normalize.py  timeutil.py
backend/tests/: conftest.py  test_clients.py  test_config.py  test_data_quality.py  test_discovery_walletsync.py  test_enrichment.py  test_fees_breakeven.py  test_metrics_normalize.py  test_nearest.py  test_paper_trading.py  test_parsing.py  test_simulator.py  test_wallet_analysis.py
backend/tests/fixtures/: clob_book.json  clob_prices_history.json  data_activity.json  data_positions.json  data_trades.json  data_value.json  gamma_event_crypto_updown.json  gamma_market_updown.json  (+1 more)
(+44 files in other folders)
